# today-i-learned

./: .gitignore  README.md  awk.md  git.md  ipdb.md
assets/aws-lambda/: index.js
assets/aws-lambda/start/: index.js  package-lock.json  package.json  response.json
assets/sqs/cloudformation/: send-message.json  sqsqueue.yaml
aws/: aws-lambda.md  cloudformation.md  s3.md  sqs.md
gcp/gmail-api/: README.md  credentials.json  credentials.json.sample  main.py
pytest/api-testing/: README.md  pyproject.toml
pytest/api-testing-with-pytest/: README.md  pyproject.toml
pytest/api-testing/api_testing/: __init__.py
pytest/api-testing/api_testing/templates/: index.html
pytest/api-testing/tests/: test_the_solution.py  weather_fixture.json
pytest/api-testing/tests/cassettes/: test_retrieve_weather_using_vcr.yaml
