[tool.poetry]
name = "api-testing-with-pytest"
version = "0.1.0"
description = ""
authors = ["Jon Whittlestone <dev@howapped.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-mock = "^3.3.1"
vcrpy = "^4.1.0"
requests = "^2.24.0"
responses = "^0.12.0"
flask = "^1.1.2"
pytest-regressions = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
